--- a/assign1.html
+++ b/assign1.html
@@ -8,59 +8,64 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Innovate Birmingham</title>
+    <title>I Am Birmingham</title>
   </head>
 
-  <body>
-   <div class = 'container'>
-    <div class="row" id="header">
-      <div>
-          <img src="images/ib_logo.png" width='200px'>
-      </div>
+  <body> 
+    <div>
+      <div style="padding-left:15%">
+      <img src="images/ib_logo.png" width='200px'>
     </div>
-  </div>
+    </div>
+
+    <br>
+
     <div class='container-fluid'>
       <div class='row'>
           <div class="p-3 mb-2 bg-warning text-white" style= width:100%>
-              <img src = 'images/mac.png' height='350px' alt="..." class="float-right">
+            <div class="custommargin"> <img src = 'images/mac.png' height='350px' class="float-right">
           <p>
-            <span style='font-size:40px'>I am Bham</span>
+            <div style='font-size:40px'>I am Bham</div>
           </p>
           <p>
-            <span style='font-size:30px'>Calling all Pioneers, Builders, The Curious, 
-            and The Determined...</span>
+            <div style='font-size:30px'>Calling all Pioneers, Builders, The Curious, 
+            and The Determined...</div>
           </p>
           <p>From steel factories to start-ups, this city of artisans has relied
             on the strength and the skills of its people. Innovate Birmingham will
             propel the next generation of pioneers on the frontier of the tech economy.
           </p> 
           
-          <button class="btn btn-warning text-white">Learn More</button>
-          
+          <button class="btn btn-warning text-white" style="color:white; border:1px solid white">Learn More</button>
+        </div> 
         </div>
         </div>
         </div>
+
+        <br>
+        <br>
+
           <div class='container'>
             <div class='row'>
-              <div class=" col-md-4" style="width: 12rem;">
-                <img src="images/html.png" height = '150px'  alt="...">
+              <div class=" col-md-4 text-center" style= width:100%>
+                <img src="images/html.png" height = '150px' class="rounded mx-auto d-block">
                 <div class="card-body">
                   <p class="card-text">Learn HTML. Markup for your webpages!</p>
-                  <button class="btn btn-default">LEARN MORE</button>
+                  <button class="btn btn-default" style="color:black; border:1px solid black">LEARN MORE</button>
                 </div>
               </div>
-              <div class=" col-md-4" style="width: 12rem;">
-                <img src="images/css.png" height = '150px'  alt="...">
+              <div class=" col-md-4 text-center" style= width:100%>
+                <img src="images/css.png" height = '150px'class="rounded mx-auto d-block">
                 <div class="card-body">
-                  <p class="card-text">Style your HTML with CSS!</p>
-                  <button class="btn btn-default">LEARN MORE</button>
+                  <p class="card-text text-center">Style your HTML with CSS!</p>
+                  <button class="btn btn-default" style="color:black; border:1px solid black">LEARN MORE</button>
                 </div>
               </div>
-              <div class=" col-md-4" style="width: 12rem;">
-                <img src="images/js.png" height = '150px' alt="...">
+              <div class=" col-md-4 text-center" style= width:100%>
+                <img src="images/js.png" height = '150px' class="rounded mx-auto d-block">
                 <div class="card-body">
                   <p class="card-text">Want to do anything? Then you need JS!</p>
-                  <button class="btn btn-default">LEARN MORE</button>
+                  <button class="btn btn-default" style="color:black; border:1px solid black">LEARN MORE</button>
                 </div>
               </div>
             </div>
